--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/composition-api": "^1.6.1",
     "@vueuse/core": "^8.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "4",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.21.1",
