--- a/package.json
+++ b/package.json
@@ -8,37 +8,34 @@
     "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.6.1",
     "@vueuse/core": "^8.5.0",
     "axios": "^0.27.2",
     "bootstrap": "4",
     "bootstrap-vue": "^2.22.0",
-    "core-js": "^3.21.1",
-    "vue": "^2.6.14",
-    "vue-demi": "^0.13.1"
+    "vue": "^2.7.10",
+    "vue-demi": "^0.13.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^8.0.0",
-    "@vue/runtime-dom": "^3.2.31",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-vue2": "^1.1.2",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.1",
     "conventional-changelog-eslint": "^3.0.9",
-    "eslint": "^8.11.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^4.2.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.5.1",
-    "typescript": "^4.6.2",
-    "unplugin-vue-components": "^0.19.6",
-    "unplugin-vue2-script-setup": "^0.10.0",
-    "vite": "^2.8.6",
-    "vite-plugin-vue2": "^1.9.3",
-    "vue-template-compiler": "^2.6.14"
+    "eslint-plugin-functional": "^4.2.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.4.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3",
+    "unplugin-vue-components": "^0.22.7",
+    "unplugin-vue2-script-setup": "^0.11.3",
+    "vite": "^3.1.0",
+    "vue-template-compiler": "^2.7.10"
   }
 }
