--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "4",
     "bootstrap-vue": "^2.22.0",
+    "pinia": "^2.0.22",
     "vue": "^2.7.10",
     "vue-demi": "^0.13.11"
   },
