--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,13 @@
 packageExtensions:
-  "bootstrap-vue@*":
+  bootstrap-vue@*:
     dependencies:
-      "vue": "^2.7.10"
-      "jquery": "*"
-  "vue-demi@*":
+      jquery: "*"
+      vue: ^2.7.14
+  vue-demi@*:
     dependencies:
-      "vue": "^2.7.10"
-  "vue-eslint-parser@*":
+      vue: ^2.7.14
+  vue-eslint-parser@*:
     dependencies:
-      "@typescript-eslint/parser" : "*"
+      "@typescript-eslint/parser": "*"
 
-yarnPath: ".yarn/releases/yarn-berry.cjs"
+yarnPath: .yarn/releases/yarn-3.6.1.cjs
