--- a/package.json
+++ b/package.json
@@ -8,35 +8,36 @@
     "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix"
   },
   "dependencies": {
-    "@vueuse/core": "^8.5.0",
-    "axios": "^0.27.2",
+    "@vueuse/core": "^10.2.1",
+    "axios": "^1.4.0",
     "bootstrap": "4",
-    "bootstrap-vue": "^2.22.0",
-    "pinia": "^2.0.22",
+    "bootstrap-vue": "^2.23.1",
+    "pinia": "^2.1.4",
     "vue": "^2.7.14",
-    "vue-demi": "^0.13.11"
+    "vue-demi": "^0.14.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "@vitejs/plugin-vue2": "^1.1.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.1",
-    "conventional-changelog-eslint": "^3.0.9",
-    "eslint": "^8.23.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-node": "^0.3.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "conventional-changelog-eslint": "^4.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-node": "^0.3.7",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^4.2.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-functional": "^5.0.8",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.4.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.3",
-    "unplugin-vue-components": "^0.22.7",
-    "unplugin-vue2-script-setup": "^0.11.3",
-    "vite": "^3.1.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6",
+    "unplugin-vue-components": "^0.25.1",
+    "unplugin-vue2-script-setup": "^0.11.4",
+    "vite": "^4.3.9",
     "vue-template-compiler": "^2.7.14"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
