--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 packageExtensions:
   bootstrap-vue@*:
     dependencies:
@@ -10,4 +14,4 @@ packageExtensions:
     dependencies:
       "@typescript-eslint/parser": "*"
 
-yarnPath: .yarn/releases/yarn-3.6.1.cjs
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
