--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "dependencies": {
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
-    "bootstrap": "4",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-next": "^0.14.10",
     "pinia": "^2.1.7",
-    "vue": "^2.7.14",
-    "vue-demi": "^0.14.6"
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify-json/bi": "^1.1.20",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-vue2": "^2.3.1",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vue/compiler-sfc": "^3.3.8",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "conventional-changelog-eslint": "^5.0.0",
@@ -34,8 +36,9 @@
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.17.4",
     "unplugin-vue-components": "^0.25.2",
-    "unplugin-vue2-script-setup": "^0.11.4",
     "vite": "^5.0.0",
     "vue-template-compiler": "^2.7.15"
   },
